--- a/android/0 知识点.md
+++ b/android/0 知识点.md
@@ -1,2 +1,9 @@
 - [2024最新Android常用开源库总结](https://blog.csdn.net/2401_85835584/article/details/141161872)
-- 111
+- 1111
+
+
+
+1. TextView
+2. 可绘制对象
+3. SpannableString
+4. viewBinding、dataBinding、lifecycle、ViewModal、Paging
